--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,8 +23,11 @@ jobs:
             fail-fast: false
             matrix:
                 include:
+                    - php-version: '7.2'
+                    - php-version: '7.3'
                     - php-version: '7.4'
                     - php-version: '8.0'
+                    - php-version: '8.1'
         services:
             mysql:
                 image: mysql:5.7
