--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,11 @@
         "ext-mbstring": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^8.5",
         "mockery/mockery": "*",
         "suin/php-expose": "^1.0",
-        "mikey179/vfsstream": "^1.1"
+        "mikey179/vfsstream": "^1.1",
+        "rector/rector": "^0.12.5"
     },
     "autoload": {
         "psr-0": {
