Add new package name handcraftedinthealps/goodby-csv

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "goodby/csv",
+    "name": "handcraftedinthealps/goodby-csv",
     "description": "CSV import/export library",
     "keywords": ["csv", "import", "export"],
     "homepage": "https://github.com/goodby/csv",
@@ -33,5 +33,8 @@
         "psr-0": {
             "Goodby\\CSV": "src/"
         }
+    },
+    "replace": {
+        "goodby/csv": "self.version"
     }
 }
